--- a/language-configuration.json
+++ b/language-configuration.json
@@ -3,7 +3,11 @@
         "lineComment": "//",
         "blockComment": ["/*", "*/"]
     },
-    "brackets": [["{", "}"], ["[", "]"], ["(", ")"]],
+    "brackets": [
+        ["{", "}"],
+        ["[", "]"],
+        ["(", ")"]
+    ],
     "autoClosingPairs": [
         { "open": "{", "close": "}" },
         { "open": "[", "close": "]" },
@@ -27,8 +31,7 @@
         "markers": {
             "start": "^begin\\b",
             "end": "^end\\b"
-        },
-        
+        }
     },
     "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
     "indentationRules": {
@@ -36,5 +39,3 @@
         "decreaseIndentPattern": "^((?!.*?\\/\\*).*\\*/)?\\s*[\\}\\]].*$"
     }
 }
-  
-  
