--- a/package.json
+++ b/package.json
@@ -1,202 +1,221 @@
 {
-  "name": "tamarin-prover",
-  "version": "1.1.4",
-  "engines": {
-    "vscode": "^1.90.0"
-  },
-  "icon": "images/icon.png",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tamarin-prover/vscode-tamarin.git"
-  },
-  "publisher": "tamarin-prover",
-  "categories": [
-    "Programming Languages",
-    "Snippets",
-    "Extension Packs"
-  ],
-  "activationEvents": [],
-  "contributes": {
-    "languages": [
-      {
-        "id": "tamarin",
-        "aliases": [
-          "tamarin"
-        ],
-        "extensions": [
-          ".spthy"
-        ],
-        "configuration": "./language-configuration.json"
-      }
-    ],
-    "grammars": [
-      {
-        "language": "tamarin",
-        "scopeName": "source.tamarin",
-        "path": "./syntaxes/tamarin.tmLanguage.json"
-      }
-    ],
-    "snippets": [
-      {
-        "language": "tamarin",
-        "path": "./snippets/snippets.json"
-      }
-    ],
-    "commands": [
-      {
-        "command": "tamarin.checkSyntax",
-        "title": "Tamarin Check Syntax"
-      },
-      {
-        "command": "tamarin.checkSemantics",
-        "title": "Tamarin Check Semantics"
-      },
-      {
-        "command": "tamarin.runServer",
-        "title": "Tamarin Run Code in Server"
-      },
-      {
-        "command": "tamarin.runConsoleProofCommand",
-        "title": "Tamarin Run Code in Console"
-      },
-      {
-        "command": "tamarin.play",
-        "title": "Run Tamarin"
-      },
-      {
-        "command": "tamarin.play2",
-        "title": "Run Tamarin with auto-sources option"
-      },
-      {
-        "command": "tamarin.renameCodeAction",
-        "when": "editorLangId == tamarin",
-        "title": "Rename"
-      },
-      {
-        "command": "Rename",
-        "title": "Rename"
-      },
-      {
-        "command": "Search definition",
-        "title": "Search definition"
-      },
-      {
-        "command": "extension.tabKeyBinding",
-        "title": "Navigate to next symbol"
-      },
-      {
-        "command": "myExtension.navigateToNextSymbol",
-        "title": "Navigate to Next Symbol"
-      }
-    ],
-    "keybindings": [
-      {
-        "command": "tamarin.checkSyntax",
-        "key": "ctrl+alt+q",
-        "when": "resourceLangId == tamarin"
-      },
-      {
-        "command": "tamarin.checkSemantics",
-        "key": "ctrl+alt+b",
-        "when": "resourceLangId == tamarin"
-      },
-      {
-        "command": "tamarin.runServer",
-        "key": "ctrl+alt+l",
-        "when": "resourceLangId == tamarin"
-      },
-      {
-        "command": "tamarin.runConsoleProofCommand",
-        "key": "ctrl+alt+p",
-        "when": "resourceLangId == tamarin"
-      },
-      {
-        "key": "ctrl+tab",
-        "command": "extension.tabKeyBinding",
-        "when": "editorTextFocus"
-      }
-    ],
-    "configuration": {
-      "title": "Tamarin",
-      "properties": {}
+    "name": "tamarin-prover",
+    "version": "1.1.4",
+    "engines": {
+        "vscode": "^1.90.0"
     },
-    "menus": {
-      "editor/context": [
-        {
-          "command": "Rename",
-          "group": "navigation",
-          "when": "editorTextFocus && editorLangId == tamarin && !inDebugRepl"
+    "icon": "images/icon.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tamarin-prover/vscode-tamarin.git"
+    },
+    "publisher": "tamarin-prover",
+    "categories": [
+        "Programming Languages",
+        "Snippets",
+        "Extension Packs"
+    ],
+    "activationEvents": [],
+    "contributes": {
+        "languages": [
+            {
+                "id": "tamarin",
+                "aliases": [
+                    "tamarin"
+                ],
+                "extensions": [
+                    ".spthy"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "tamarin",
+                "scopeName": "source.tamarin",
+                "path": "./syntaxes/tamarin.tmLanguage.json"
+            }
+        ],
+        "snippets": [
+            {
+                "language": "tamarin",
+                "path": "./snippets/snippets.json"
+            }
+        ],
+        "commands": [
+            {
+                "command": "tamarin.checkSyntax",
+                "title": "Tamarin Check Syntax",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.checkSemantics",
+                "title": "Tamarin Check Semantics",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.runServer",
+                "title": "Tamarin Run Code in Server",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.runConsoleProofCommand",
+                "title": "Tamarin Run Code in Console",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.play",
+                "title": "Run Tamarin",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.play2",
+                "title": "Run Tamarin with auto-sources option",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "tamarin.renameCodeAction",
+                "when": "editorLangId == tamarin",
+                "title": "Rename"
+            },
+            {
+                "command": "Rename",
+                "title": "Rename",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "Search definition",
+                "title": "Search definition",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "extension.tabKeyBinding",
+                "title": "Navigate to next symbol",
+                "when": "editorLangId == tamarin"
+            },
+            {
+                "command": "myExtension.navigateToNextSymbol",
+                "title": "Navigate to Next Symbol",
+                "when": "editorLangId == tamarin"
+            }
+        ],
+        "keybindings": [
+            {
+                "command": "tamarin.checkSyntax",
+                "key": "ctrl+alt+q",
+                "when": "resourceLangId == tamarin"
+            },
+            {
+                "command": "tamarin.checkSemantics",
+                "key": "ctrl+alt+b",
+                "when": "resourceLangId == tamarin"
+            },
+            {
+                "command": "tamarin.runServer",
+                "key": "ctrl+alt+l",
+                "when": "resourceLangId == tamarin"
+            },
+            {
+                "command": "tamarin.runConsoleProofCommand",
+                "key": "ctrl+alt+p",
+                "when": "resourceLangId == tamarin"
+            },
+            {
+                "key": "ctrl+tab",
+                "command": "extension.tabKeyBinding",
+                "when": "editorTextFocus && resourceLangId == tamarin"
+            }
+        ],
+        "configuration": {
+            "title": "Tamarin",
+            "properties": {}
         },
-        {
-          "command": "Search definition",
-          "group": "navigation",
-          "when": "editorTextFocus && editorLangId == tamarin && !inDebugRepl"
+        "menus": {
+            "editor/context": [
+                {
+                    "command": "Rename",
+                    "group": "navigation",
+                    "when": "editorTextFocus && editorLangId == tamarin && !inDebugRepl"
+                },
+                {
+                    "command": "Search definition",
+                    "group": "navigation",
+                    "when": "editorTextFocus && editorLangId == tamarin && !inDebugRepl"
+                }
+            ]
         }
-      ]
+    },
+    "main": "./out/extension.js",
+    "types": "bindings/node",
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./ ",
+        "lint": "eslint src --ext ts",
+        "watch": "tsc -watch -p ./",
+        "pretest": "npm run compile && npm run lint",
+        "test": "node ./out/test/runTest.js",
+        "install": "node-gyp-build",
+        "prebuildify": "prebuildify --napi --strip"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.12.0",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^13.13.52",
+        "@types/vscode": "^1.90.0",
+        "eslint": "^8.57.1",
+        "globals": "^15.11.0",
+        "prebuildify": "^6.0.0",
+        "prettier": "^3.3.3",
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^8.8.1",
+        "vscode-test": "^1.3.0"
+    },
+    "dependencies": {
+        "node-gyp-build": "^4.8.0",
+        "ovsx": "^0.8.1",
+        "tree-sitter": "^0.21.0",
+        "tree-sitter-cli": "^0.22.6",
+        "tree-sitter-highlight": "^1.0.1",
+        "tree-sitter-javascript": "^0.21.3",
+        "vsce": "^2.15.0",
+        "vscode-languageclient": "^9.0.1",
+        "web-tree-sitter": "^0.22.6"
+    },
+    "peerDependencies": {
+        "tree-sitter": "^0.21.0"
+    },
+    "peerDependenciesMeta": {
+        "tree_sitter": {
+            "optional": false
+        }
+    },
+    "license": "MIT",
+    "files": [
+        "binding.gyp",
+        "prebuilds/**",
+        "bindings/node/*",
+        "src/features/**",
+        "src/grammar/parser-tamarin.wasm",
+        "src/features/**",
+        "src/extension.ts",
+        "syntaxes/tamarin.tmLanguage.json",
+        "out/**",
+        "LICENSE",
+        "package.json",
+        "Readme.md",
+        "images/**",
+        "node_modules/vscode-languageclient",
+        "node_modules/web-tree-sitter",
+        "language-configuration.json"
+    ],
+    "tree-sitter": [
+        {
+            "scope": "source.spthy",
+            "injection-regex": "^spthy$"
+        }
+    ],
+    "prettier": {
+        "tabWidth": 4,
+        "printWidth": 120
     }
-  },
-  "main": "./out/extension.js",
-  "types": "bindings/node",
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./ ",
-    "lint": "eslint src --ext ts",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js",
-    "install": "node-gyp-build",
-    "prebuildify": "prebuildify --napi --strip"
-  },
-  "devDependencies": {
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^13.13.52",
-    "@types/vscode": "^1.90.0",
-    "prebuildify": "^6.0.0",
-    "typescript": "^5.4.5",
-    "vscode-test": "^1.3.0"
-  },
-  "dependencies": {
-    "node-gyp-build": "^4.8.0",
-    "ovsx": "^0.8.1",
-    "tree-sitter": "^0.21.0",
-    "tree-sitter-cli": "^0.22.6",
-    "tree-sitter-highlight": "^1.0.1",
-    "tree-sitter-javascript": "^0.21.3",
-    "vsce": "^2.15.0",
-    "vscode-languageclient": "^9.0.1",
-    "web-tree-sitter": "^0.22.6"
-  },
-  "peerDependencies": {
-    "tree-sitter": "^0.21.0"
-  },
-  "peerDependenciesMeta": {
-    "tree_sitter": {
-      "optional": false
-    }
-  },
-  "license": "MIT",
-  "files": [
-    "binding.gyp",
-    "prebuilds/**",
-    "bindings/node/*",
-    "src/features/**",
-    "src/grammar/parser-tamarin.wasm",
-    "src/features/**",
-    "src/extension.ts",
-    "syntaxes/tamarin.tmLanguage.json",
-    "out/**",
-    "LICENSE",
-    "package.json",
-    "Readme.md",
-    "images/**",
-    "node_modules/vscode-languageclient",
-    "node_modules/web-tree-sitter",
-    "language-configuration.json"
-  ],
-  "tree-sitter": [
-    {
-      "scope": "source.spthy",
-      "injection-regex": "^spthy$"
-    }
-  ]
 }
