--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./ ",
-        "lint": "eslint src --ext ts",
+        "lint": "eslint src",
         "watch": "tsc -watch -p ./",
         "pretest": "npm run compile && npm run lint",
         "test": "node ./out/test/runTest.js",
